--- a/frontend/render.yaml
+++ b/frontend/render.yaml
@@ -5,7 +5,7 @@ services:
     buildCommand: pip install -r requirements.txt
     startCommand: gunicorn app:app
     envVars:
-      - key: MODEL_PATH
-        value: ticket_classifier.pt
+      - key: HF_REPO_ID
+        value: Tushar7012/ticket-classifier
       - key: PYTHON_VERSION
         value: 3.10.0
